# wolf_vision

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Findwolf.cmake  README.md  README.txt  ROS-based code style eclipse indented 4sp.xml  ROS-based wolf code style QT indented 4sp.xml  Wolf_ideas.txt  codetemplates eclipse.xml  license_header_2021.txt  license_header_2022.txt  license_header_2023.txt  license_header_2024.txt  package.xml
hello_plugin/: CMakeLists.txt  hello_plugin.cpp  loader.hpp  params.yaml  params_autoconf.cpp  params_conf.yaml  parser_yaml.hpp
hello_wolf/: CMakeLists.txt  capture_range_bearing.h  constraint_bearing.h  constraint_range_bearing.h  factor_bearing.h  factor_range_bearing.h  feature_range_bearing.cpp  feature_range_bearing.h  hello_wolf.cpp  landmark_point_2D.h  processor_range_bearing.cpp  processor_range_bearing.h  sensor_range_bearing.cpp  sensor_range_bearing.h
src/: CMakeLists.txt  IMU_tools.h  SE3.h  _active_search.cpp  activeSearch.cpp  activeSearch.h  active_search.cpp  active_search.h  capture.h  captureMotionBuffered.h  capture_GPS.cpp  capture_GPS_fix.cpp  capture_GPS_fix.h  capture_IMU.cpp  capture_IMU.h  capture_base.cpp  capture_base.h  capture_buffer.h  capture_fix.cpp  capture_fix.h  capture_gps.cpp  capture_gps.h  capture_gps_fix.cpp  capture_gps_fix.h  capture_image.cpp  capture_image.h  capture_imu.cpp  capture_imu.h  capture_laser_2D.cpp  capture_laser_2D.h  capture_motion.cpp  capture_motion.h  capture_motion2.cpp  capture_motion2.h  capture_motion_buffered.h  capture_odom_2D.cpp  capture_odom_2D.h  capture_odom_2D2.cpp  capture_odom_2D2.h  capture_odom_3D.cpp  (+347 more)
src/association/: association_nnls.cpp  association_node.cpp  association_solver.cpp  association_tree.cpp
src/capture/: capture_GPS.cpp  capture_GPS_fix.cpp  capture_IMU.cpp  capture_base.cpp  capture_image.cpp  capture_laser_2D.cpp  capture_motion.cpp  capture_odom_2D.cpp  capture_odom_3D.cpp  capture_pose.cpp  capture_velocity.cpp  capture_void.cpp  capture_wheel_joint_position.cpp
src/captures/: CMakeLists.txt  capture_velocity.cpp  capture_velocity.h  capture_wheel_joint_position.cpp  capture_wheel_joint_position.h
src/ceres_wrapper/: CMakeLists.txt  auto_diff_cost_function_wrapper.h  auto_diff_cost_function_wrapper_base.h  ceres_manager.cpp  ceres_manager.h  ceres_wrapper_numeric.cpp  ceres_wrapper_numeric.h  complex_angle_parametrization.cpp  complex_angle_parametrization.h  cost_function_wrapper.h  create_auto_diff_cost_function.cpp  create_auto_diff_cost_function.h  create_auto_diff_cost_function_ceres.h  create_auto_diff_cost_function_wrapper.h  create_numeric_diff_cost_function.cpp  create_numeric_diff_cost_function.h  create_numeric_diff_cost_function_ceres.h  derived_constraint_auto_diff_cost_function.h  local_parametrization_wrapper.cpp  local_parametrization_wrapper.h  qr_manager.cpp  qr_manager.h  solver_manager.cpp  solver_manager.h  sparse_utils.h
src/common/: node_base.cpp  time_stamp.cpp
src/constraint/: CMakeLists.txt  constraint_analytic.cpp  constraint_base.cpp
src/constraints/: CMakeLists.txt  constraint_autodiff_apriltag.h  constraint_autodiff_distance_3D.h  constraint_autodiff_trifocal.h  constraint_diff_drive.h
src/data_association/: association_nnls.h  association_node.h  association_solver.cpp  association_solver.h  association_tree.cpp  association_tree.h
src/examples/: .gitignore  CMakeLists.txt  camera.yaml  camera_Dinesh_LAAS_params.yaml  camera_apriltag_params.yaml  camera_params_1280x960_ideal.yaml  camera_params_ueye.yaml  camera_params_ueye_radial_dist.yaml  camera_params_ueye_sim.yaml  example_factory.cpp  example_factory.h  example_template_factory.cpp  factory_registers.hpp  gtest_ceres.yaml  gtest_processorMotion_optimization_testCase.yaml  map_apriltag_1.yaml  map_multiline_example.yaml  map_polyline_example.yaml  odom_3D.yaml  parental.h  processor_image_ORB.yaml  processor_image_feature.yaml  processor_image_vision_utils.yaml  processor_imu.yaml  processor_imu_no_vote.yaml  processor_imu_t1.yaml  processor_imu_t6.yaml  processor_odom_3D.yaml  processor_tracker_feature_trifocal.yaml  processor_tracker_feature_trifocal_vision_utils.yaml  processor_tracker_landmark_apriltag.yaml  sensor_imu.yaml  sensor_odom_3D_HQ.yaml  test_2_lasers_offline.cpp  test_ROI_ORB.cpp  test_SPQR.cpp  test_SensorDataAbsolutePose.cpp  test_analytic_odom_constraint.cpp  test_analytic_odom_factor.cpp  test_apriltag.cpp  (+105 more)
src/factor/: CMakeLists.txt  factor_analytic.cpp  factor_base.cpp
src/feature/: CMakeLists.txt  feature_GPS_fix.cpp  feature_GPS_pseudorange.cpp  feature_IMU.cpp  feature_apriltag.cpp  feature_base.cpp  feature_corner_2D.cpp  feature_diff_drive.cpp  feature_diff_drive.h  feature_line_2D.cpp  feature_odom_2D.cpp  feature_point_image.cpp  feature_polyline_2D.cpp  feature_pose.cpp
src/features/: CMakeLists.txt  feature_apriltag.cpp  feature_apriltag.h  feature_diff_drive.cpp  feature_diff_drive.h
src/frame/: frame_base.cpp
src/internal/: config.h.in
test/: CMakeLists.txt  camera_gazebo.yaml  gtest_IMU.cpp  gtest_IMU_tools.cpp  gtest_SE3.cpp  gtest_capture_base.cpp  gtest_capture_image.cpp  gtest_ceres_manager.cpp  gtest_constraint_IMU.cpp  gtest_constraint_absolute.cpp  gtest_constraint_autodiff.cpp  gtest_constraint_autodiff_apriltag.cpp  gtest_constraint_autodiff_distance_3D.cpp  gtest_constraint_autodiff_trifocal.cpp  gtest_constraint_odom_3D.cpp  gtest_constraint_pose_2D.cpp  gtest_constraint_pose_3D.cpp  gtest_constraint_sparse.cpp  gtest_converter.cpp  gtest_eigen_predicates.cpp  gtest_emplace.cpp  gtest_example.cpp  gtest_factor_IMU.cpp  gtest_factor_absolute.cpp  gtest_factor_autodiff.cpp  gtest_factor_autodiff_apriltag.cpp  gtest_factor_autodiff_distance_3D.cpp  gtest_factor_autodiff_trifocal.cpp  gtest_factor_epipolar.cpp  gtest_factor_odom_3D.cpp  gtest_factor_pixelHP.cpp  gtest_factor_pixel_hp.cpp  gtest_factor_pose_2D.cpp  gtest_factor_pose_3D.cpp  gtest_factor_sparse.cpp  gtest_factor_trifocal.cpp  gtest_feature_IMU.cpp  gtest_feature_apriltag.cpp  gtest_feature_base.cpp  gtest_feature_point_image.cpp  (+42 more)
(+726 files in other folders)
